[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scenes/Main Options.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/FNF Text.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/Main Option Button.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 130.206
margin_top = 161.803
margin_right = 1378.21
margin_bottom = 737.803
grow_vertical = 2
rect_scale = Vector2( 1.4, 1.4 )
custom_constants/separation = 99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FNF Text" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 430.0
margin_bottom = 70.0
rect_min_size = Vector2( 430, 70 )
text = "GAMEPLAY"

[node name="Gameplay Options Button" type="Button" parent="VBoxContainer/FNF Text"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FNF Text5" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 169.0
margin_right = 409.0
margin_bottom = 238.0
rect_min_size = Vector2( 409, 69 )
text = "controls"

[node name="Controls Options Button" type="Button" parent="VBoxContainer/FNF Text5"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FNF Text6" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 337.0
margin_right = 1182.0
margin_bottom = 407.0
rect_min_size = Vector2( 1182, 70 )
text = "photosensitivE MODE OFF"

[node name="Photosensitive Button" type="Button" parent="VBoxContainer/FNF Text6"]
anchor_right = 1.0
anchor_bottom = 1.0
toggle_mode = true
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FNF Text4" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 506.0
margin_right = 1248.0
margin_bottom = 576.0
rect_min_size = Vector2( 1248, 70 )
text = "CHART EDITOR SUPER ALPHA"

[node name="Chart Editor Button" type="Button" parent="VBoxContainer/FNF Text4"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FNF Text2" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_top = 342.0
margin_right = 523.0
margin_bottom = 412.0
rect_min_size = Vector2( 523, 70 )
text = "appearance"

[node name="Button" type="Button" parent="VBoxContainer/FNF Text2"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FNF Text3" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_top = 342.0
margin_right = 215.0
margin_bottom = 408.0
rect_min_size = Vector2( 215, 66 )
text = "misc"

[node name="Button" type="Button" parent="VBoxContainer/FNF Text3"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/FNF Text/Gameplay Options Button" to="." method="_on_Gameplay_Options_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/FNF Text5/Controls Options Button" to="." method="_on_Controls_Options_Button_pressed"]
[connection signal="toggled" from="VBoxContainer/FNF Text6/Photosensitive Button" to="." method="_on_Photosensitive_Button_toggled"]
[connection signal="pressed" from="VBoxContainer/FNF Text4/Chart Editor Button" to="." method="_on_Chart_Editor_Button_pressed"]
